--- a/project.config.json
+++ b/project.config.json
@@ -41,7 +41,7 @@
   "compileType": "miniprogram",
   "libVersion": "2.19.1",
   "appid": "wx67c9b3ceaa749cee",
-  "projectname": "miniprogram-2",
+  "projectname": "Learn_note",
   "debugOptions": {
     "hidedInDevtools": []
   },
